--- a/ec2-jenkins.yaml
+++ b/ec2-jenkins.yaml
@@ -10,7 +10,7 @@ Parameters:
   key:
     Type: String
   iamprofile:
-    Type: String
+    Type: String  
 
 # Recursos que serão provisionados
 Resources:  
@@ -24,7 +24,23 @@ Resources:
         - CidrIp: 0.0.0.0/0
           FromPort: 22
           ToPort: 22
-          IpProtocol: tcp  
+          IpProtocol: tcp
+        ##### NOVO - INÍCIO #####
+        - CidrIp: 0.0.0.0/0
+          FromPort: 8080
+          ToPort: 8080
+          IpProtocol: tcp
+        ##### NOVO - FIM #####
+  ##### NOVO - INÍCIO #####
+  #provisionar IP Elástico
+  IPAddress:
+    Type: AWS::EC2::EIP
+  IPAssoc:
+    Type: AWS::EC2::EIPAssociation
+    Properties:
+      InstanceId: !Ref 'EC2'
+      EIP: !Ref 'IPAddress'
+  ##### NOVO - FIM #####
   # Provisionar EC2
   EC2:
     Type: AWS::EC2::Instance
